--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="slide active" style="
+        <div class="slide" style="
           background-image: url('https://images.unsplash.com/photo-1635105794502-728ce527dd1a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80');
         ">
             <h3>Кисловодск</h3>
